methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:10: error: not found: value bool
  return bool
         ^