methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  if(!estFaceMur()) {
    var bool=false
    avance()
    if(getCouleurSol()==Color.green) {
      bool=true
    }  
  }
  return bool
}